@@ -1,5 +1,12 @@
 2008-12-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
+	Made messages in showFiles() translatable.
+	* po/aria2.pot
+	* src/main.cc
+	* src/message.h
+
+2008-12-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
 	Print the contents of Torrent/Metalink files are printed without
 	-T/-M options.
 	* src/main.cc
